--- a/articles/virtual-machines/index.yml
+++ b/articles/virtual-machines/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 02/14/2020
-  ms.openlocfilehash: eb7d7c911fc099a5f3b5456d7fb77688e0b06af5
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 09e6d6400c9aa2fcdd54dbc568c4429c1b71497c
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88816467"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91970055"
 highlightedContent:
   items:
   - title: 使用 Azure CLI 创建 Linux 虚拟机
@@ -33,7 +33,7 @@ highlightedContent:
     url: ./spot-vms.md
   - title: 专用主机 - 用于承载一个或多个虚拟机的物理服务器。
     itemType: concept
-    url: ./linux/dedicated-hosts.md
+    url: ./dedicated-hosts.md
   - title: 邻近放置组 - 使 VM 尽可能相近，以便降低延迟。
     itemType: how-to-guide
     url: ./linux/proximity-placement-groups.md
