--- a/articles/active-directory/authentication/index.yml
+++ b/articles/active-directory/authentication/index.yml
@@ -8,16 +8,16 @@ metadata:
   ms.service: active-directory
   ms.subservice: authentication
   ms.topic: landing-page
-  author: iainfoulds
-  ms.author: iainfou
+  author: MicrosoftGuyJFlo
+  ms.author: joflore
   ms.date: 02/11/2020
   ms.collection: M365-identity-device-management
-  ms.openlocfilehash: 8262c7e0e5e092a9ea8602a4e575cdc402e7ef8b
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 17775be39e534d0825596973452dabc13054ee8d
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88717296"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91968219"
 landingContent:
 - title: 关于身份验证
   linkLists:
