--- a/articles/cognitive-services/form-recognizer/toc.yml
+++ b/articles/cognitive-services/form-recognizer/toc.yml
@@ -81,13 +81,13 @@
     - name: SDK
       items:
         - name: .NET
-          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/ai.formrecognizer-readme-pre'
+          href: 'https://docs.microsoft.com/dotnet/api/overview/azure/ai.formrecognizer-readme'
         - name: Python
-          href: 'https://docs.microsoft.com/python/api/azure-ai-formrecognizer/azure.ai.formrecognizer'
+          href: 'https://docs.microsoft.com/en-us/python/api/azure-ai-formrecognizer/?view=azure-python'
         - name: Java
-          href: 'https://docs.microsoft.com/java/api/overview/azure/ai-formrecognizer-readme-pre'
+          href: 'https://docs.microsoft.com/java/api/overview/azure/ai-formrecognizer-readme'
         - name: JavaScript
-          href: 'https://docs.microsoft.com/javascript/api/overview/azure/ai-form-recognizer-readme-pre'
+          href: 'https://docs.microsoft.com/javascript/api/overview/azure/ai-form-recognizer-readme'
 - name: 资源
   items:
     - name: 定价和限制
