--- a/articles/virtual-machines/windows/index.yml
+++ b/articles/virtual-machines/windows/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: cynthn
   ms.author: cynthn
   ms.date: 09/09/2019
-  ms.openlocfilehash: 9210922f4b43eb229ec0e3b0b554d06f7c2be2eb
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: a0376262468d076b64d1c22427bb5f9aa4ecc6df
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "88816671"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91973676"
 landingContent:
 - title: 最新功能
   linkLists:
@@ -24,7 +24,7 @@ landingContent:
     - text: 点 VM
       url: ../spot-vms.md
     - text: 专用主机
-      url: dedicated-hosts.md
+      url: ../dedicated-hosts.md
     - text: 邻近放置组
       url: proximity-placement-groups.md
 - title: 入门
