--- a/articles/azure-vmware/toc.yml
+++ b/articles/azure-vmware/toc.yml
@@ -61,9 +61,11 @@
     - name: 为 VM 部署灾难恢复
       href: disaster-recovery-for-virtual-machines.md
     - name: 通过内容库部署 VM
-      href: tutorial-deploy-vm-content-library.md
+      href: ./deploy-vm-content-library.md
     - name: 设置 GitHub Enterprise Server
       href: github-enterprise-server.md
+    - name: 创建 IPSec 隧道
+      href: create-ipsec-tunnel.md
     - name: Azure 本机集成
       items:
         - name: API 管理
