--- a/articles/databox-online/TOC.yml
+++ b/articles/databox-online/TOC.yml
@@ -165,6 +165,8 @@
               href: azure-stack-edge-gpu-troubleshoot.md
             - name: 订购问题
               href: azure-stack-edge-troubleshoot-ordering.md
+            - name: 激活问题
+              href: azure-stack-edge-gpu-troubleshoot-activation.md
             - name: 请联系 Microsoft 支持部门
               href: azure-stack-edge-contact-microsoft-support.md
     - name: 发行说明
