--- a/articles/key-vault/general/toc.yml
+++ b/articles/key-vault/general/toc.yml
@@ -162,6 +162,8 @@
       href: client-libraries.md
     - name: REST API 错误代码 - Azure Key Vault
       href: rest-error-codes.md
+    - name: 常见错误代码 - Azure Key Vault
+      href: common-error-codes.md
     - name: 常见参数和标头
       href: common-parameters-and-headers.md
     - name: Key Vault 版本
