--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -245,6 +245,9 @@
             - name: Azure PowerShell
               href: howto-restore-server-powershell.md
               displayName: 'restore server, backup, geo-restore powershell'
+            - name: 恢复已删除的服务器
+              href: howto-restore-dropped-server.md
+              displayName: 'restore server,dropped, recover'
         - name: 连接应用程序
           items:
             - name: 配置 SSL
@@ -323,20 +326,26 @@
             - name: 创建只读副本 - Azure PowerShell
               href: howto-read-replicas-powershell.md
               displayName: 'data-in replication, replica, failover'
-            - name: 疑难解答
-              items:
-                - name: 排查连接错误
-                  href: howto-troubleshoot-common-connection-issues.md
-                  displayName: 'debug, connection issues, connectivity, cannot connect'
-                - name: 查询性能故障排除
-                  href: howto-troubleshoot-query-performance.md
-                  displayName: 'debug, performance issues, query performance'
-                - name: 如何使用 sys 架构中的视图
-                  href: howto-troubleshoot-sys-schema.md
-                  displayName: 'sys schema, views'
-                - name: 排查数据加密问题
-                  href: howto-data-encryption-troubleshoot.md
-                  displayName: 'encryption, security'
+        - name: 疑难解答
+          items:
+            - name: 排查连接错误
+              href: howto-troubleshoot-common-connection-issues.md
+              displayName: 'debug, connection issues, connectivity, cannot connect'
+            - name: 解决常见问题
+              href: howto-troubleshoot-common-errors.md
+              displayName: 'SUPER privilege, DBA role, Access is denied'
+            - name: 查询性能故障排除
+              href: howto-troubleshoot-query-performance.md
+              displayName: 'debug, performance issues, query performance'
+            - name: 如何使用 sys 架构中的视图
+              href: howto-troubleshoot-sys-schema.md
+              displayName: 'sys schema, views'
+            - name: 排查数据加密问题
+              href: howto-data-encryption-troubleshoot.md
+              displayName: 'encryption, security'
+            - name: 排查复制延迟问题
+              href: howto-troubleshoot-replication-latency.md
+              displayName: 'replication, latency, monitor'
         - name: 高级威胁防护
           items:
             - name: Azure 门户
