commit translated contents

--- a/articles/cognitive-services/Computer-vision/index.yml
+++ b/articles/cognitive-services/Computer-vision/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: PatrickFarley
   ms.author: pafarley
   ms.date: 09/22/2020
-  ms.openlocfilehash: 3a11be023df31fc4f6babe44d869ae89862ae501
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.openlocfilehash: 37a5a85fab739cca5983f7c858845dcdef3bc307
+  ms.sourcegitcommit: d103a93e7ef2dde1298f04e307920378a87e982a
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91277234"
+  ms.lasthandoff: 10/13/2020
+  ms.locfileid: "91971959"
 landingContent:
 - title: 关于计算机视觉
   linkLists:
@@ -144,8 +144,8 @@ landingContent:
   linkLists:
   - linkListType: reference
     links:
-    - text: 计算机视觉 API v3.1 预览版
-      url: https://westus2.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-preview-2/operations/5d986960601faab4bf452005
+    - text: 计算机视觉 API v3.1
+      url: https://westcentralus.dev.cognitive.microsoft.com/docs/services/computer-vision-v3-1-ga/operations/5d986960601faab4bf452005
     - text: 计算机视觉 API v3.0
       url: https://aka.ms/computer-vision-v3-ref
     - text: 计算机视觉 API v2.1
