--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -36,6 +36,8 @@
           href: connect-ios.md
         - name: 使用 Microsoft Store 客户端进行连接
           href: connect-microsoft-store.md
+        - name: 连接 Linux 设备
+          href: linux-overview.md
     - name: 配置设备重定向
       href: configure-device-redirections.md
     - name: 设置 PowerShell 模块
