--- a/articles/iot-dps/toc.yml
+++ b/articles/iot-dps/toc.yml
@@ -38,15 +38,17 @@
 - name: 教程
   items:
     - name: 1 - 预配具有注册组的设备集
-      href: how-to-legacy-device-symm-key.md
+      items:
+        - name: 使用对称密钥预配设备
+          href: how-to-legacy-device-symm-key.md
+        - name: 使用自定义分配策略
+          href: tutorial-custom-allocation-policies.md
     - name: 2 - 将设备预配到多个中心
       items:
         - name: 将多个中心链接到 DPS
           href: tutorial-provision-multiple-hubs.md
         - name: 多租户的预配
           href: how-to-provision-multitenant.md
-        - name: 使用自定义分配策略
-          href: tutorial-custom-allocation-policies.md
 - name: 示例
   items:
     - name: 模拟 TPM 设备证明示例
