commit translated contents

--- a/articles/azure-sql/database/index.yml
+++ b/articles/azure-sql/database/index.yml
@@ -11,13 +11,13 @@ metadata:
   author: MashaMSFT
   ms.author: mathoma
   ms.reviewer: sstein
-  ms.date: 05/27/2020
-  ms.openlocfilehash: 86c1553142e1314b11c665de3a2641aa8e3cc40e
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.date: 10/13/2020
+  ms.openlocfilehash: 067a7d52f576ffaf8fe60c567692fb049ee6b72c
+  ms.sourcegitcommit: 1b47921ae4298e7992c856b82cb8263470e9e6f9
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91317032"
+  ms.lasthandoff: 10/14/2020
+  ms.locfileid: "92055913"
 landingContent:
 - title: Azure SQL 数据库
   linkLists:
@@ -49,6 +49,8 @@ landingContent:
       url: migrate-to-database-from-sql-server.md
     - text: 与 SQL Server 之间的 T-SQL 差异
       url: transact-sql-tsql-differences-sql-server.md
+    - text: 预留容量
+      url: reserved-capacity-overview.md
 - title: 业务连续性
   linkLists:
   - linkListType: how-to-guide
