commit translated contents

--- a/articles/api-management/index.yml
+++ b/articles/api-management/index.yml
@@ -10,12 +10,12 @@ metadata:
   author: georgewallace
   ms.author: gwallace
   ms.date: 03/08/2020
-  ms.openlocfilehash: db35ab98c2e53246fddc26d724b24fda71eee6dc
-  ms.sourcegitcommit: 50802bffd56155f3b01bfb4ed009b70045131750
+  ms.openlocfilehash: 6813a3cb284f83c599344c7673f1a5d148adef0b
+  ms.sourcegitcommit: a92fbc09b859941ed64128db6ff72b7a7bcec6ab
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "91932611"
+  ms.lasthandoff: 10/15/2020
+  ms.locfileid: "92071160"
 landingContent:
 - title: 关于 API 管理
   linkLists:
@@ -70,7 +70,7 @@ landingContent:
     - text: Azure PowerShell
       url: powershell-samples.md
     - text: Azure Policy 内置策略定义
-      url: ./policy-samples.md
+      url: ./policy-reference.md
 - title: 体系结构
   linkLists:
   - linkListType: architecture
