--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -37,6 +37,8 @@
           href: database/scale-resources.md
         - name: 读取横向扩展
           href: database/read-scale-out.md
+        - name: 分布式事务
+          href: database/elastic-transactions-overview.md
         - name: 安全性
           items:
             - name: 概述
@@ -826,6 +828,20 @@
                           href: 'https://docs.microsoft.com/sql/machine-learning/data-exploration/python-dataframe-pandas?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
                         - name: 将数据帧插入 SQL
                           href: 'https://docs.microsoft.com/sql/machine-learning/data-exploration/python-dataframe-sql-server?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
+                - name: 数据类型转换
+                  items:
+                    - name: Python 到 SQL
+                      href: 'https://docs.microsoft.com/sql/machine-learning/python/python-libraries-and-data-types?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
+                    - name: R 到 SQL
+                      href: 'https://docs.microsoft.com/sql/machine-learning/r/r-libraries-and-data-types?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
+                - name: 部署
+                  items:
+                    - name: 通过存储过程操作
+                      href: 'https://docs.microsoft.com/sql/machine-learning/r/operationalizing-your-r-code?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
+                    - name: 为 SQL Server 转换 R 代码
+                      href: 'https://docs.microsoft.com/sql/machine-learning/r/converting-r-code-for-use-in-sql-server?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
+                    - name: 使用 sqlrutils 创建存储过程
+                      href: 'https://docs.microsoft.com/sql/machine-learning/r/how-to-create-a-stored-procedure-using-sqlrutils?context=/azure/azure-sql/managed-instance/context/ml-context&view=azuresqldb-mi-current&preserve-view=true'
                 - name: 预测
                   items:
                     - name: 使用 PREDICT T-SQL 本机评分
@@ -862,6 +878,8 @@
               href: managed-instance/public-endpoint-overview.md
             - name: 审核
               href: managed-instance/auditing-configure.md
+            - name: 服务器信任组
+              href: managed-instance/server-trust-group-overview.md
     - name: 如何
       items:
         - name: 概述
