--- a/articles/vpn-gateway/TOC.yml
+++ b/articles/vpn-gateway/TOC.yml
@@ -5,6 +5,7 @@
     - name: 什么是 VPN 网关？
       href: vpn-gateway-about-vpngateways.md
 - name: 教程
+  expanded: true
   items:
     - name: 创建和管理 VPN 网关
       href: vpn-gateway-tutorial-create-gateway-powershell.md
