--- a/articles/virtual-wan/TOC.yml
+++ b/articles/virtual-wan/TOC.yml
@@ -5,6 +5,7 @@
     - name: 什么是虚拟 WAN？
       href: virtual-wan-about.md
 - name: 教程
+  expanded: true
   items:
     - name: 创建站点到站点连接
       href: virtual-wan-site-to-site-portal.md
