commit translated contents

--- a/articles/cognitive-services/metrics-advisor/index.yml
+++ b/articles/cognitive-services/metrics-advisor/index.yml
@@ -6,19 +6,19 @@ metadata:
   titleSuffix: Azure Cognitive Services
   services: cognitive-services
   description: 指标顾问是一个时序监视平台，它提供一组用于数据引入、异常检测和诊断的 API，无需了解机器学习即可使用它们。
-  author: aahill
+  author: mrbullwinkle
   manager: nitinme
   ms.service: cognitive-services
   ms.subservice: metrics-advisor
   ms.topic: landing-page
   ms.date: 08/13/2020
-  ms.author: aahi
-  ms.openlocfilehash: f30f45b8a683d9403973517ee4558be9cd4be664
-  ms.sourcegitcommit: 829d951d5c90442a38012daaf77e86046018e5b9
+  ms.author: mbullwin
+  ms.openlocfilehash: 71548974c3ea1d136a307d90a7747c788e7a1bb2
+  ms.sourcegitcommit: 2e72661f4853cd42bb4f0b2ded4271b22dc10a52
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 10/09/2020
-  ms.locfileid: "90928694"
+  ms.lasthandoff: 10/14/2020
+  ms.locfileid: "92046122"
 landingContent:
 - title: 关于指标顾问
   linkLists:
