--- a/articles/iot-edge/TOC.yml
+++ b/articles/iot-edge/TOC.yml
@@ -111,28 +111,26 @@
       href: iot-edge-glossary.md
 - name: 操作指南
   items:
-    - name: 注册 IoT Edge 设备
-      href: how-to-register-device.md
-    - name: 安装和管理 IoT Edge
+    - name: 创建 IoT Edge 设备
       items:
-        - name: Linux
-          href: how-to-install-iot-edge-linux.md
-        - name: Windows
-          href: how-to-install-iot-edge-windows.md
-        - name: Windows 上的 Linux 容器
-          href: how-to-install-iot-edge-windows-with-linux.md
-        - name: Windows Server VM
-          href: how-to-install-iot-edge-windows-server-vm.md
-        - name: Ubuntu VM
-          href: how-to-install-iot-edge-ubuntuvm.md
-        - name: Kubernetes
-          href: how-to-install-iot-edge-kubernetes.md
+        - name: 安装运行时
+          href: how-to-install-iot-edge.md
+        - name: 注册设备并对设备进行身份验证
+          items:
+            - name: 对称密钥身份验证
+              href: how-to-manual-provision-symmetric-key.md
+            - name: X.509 证书身份验证
+              href: how-to-manual-provision-x509.md
+        - name: 更新运行时
+          href: how-to-update-iot-edge.md
         - name: 管理设备证书
           href: how-to-manage-device-certificates.md
         - name: 创建测试证书
           href: how-to-create-test-certificates.md
-        - name: 更新运行时版本
-          href: how-to-update-iot-edge.md
+        - name: Kubernetes 上的 IoT Edge
+          href: how-to-install-iot-edge-kubernetes.md
+        - name: 使用 ARM 模板创建 IoT Edge 虚拟机
+          href: how-to-install-iot-edge-ubuntuvm.md
     - name: 使用 DPS 进行自动预配
       items:
         - name: TPM 证明
@@ -183,6 +181,10 @@
           href: how-to-monitor-module-twins.md
         - name: EdgeAgent 直接方法
           href: how-to-edgeagent-direct-method.md
+        - name: 检索 IoT Edge 日志
+          href: how-to-retrieve-iot-edge-logs.md
+        - name: 访问内置指标
+          href: how-to-access-built-in-metrics.md
     - name: 使用 IoT Edge 设备作为网关
       items:
         - name: 配置透明网关
@@ -225,36 +227,38 @@
           href: troubleshoot-common-errors.md
 - name: 参考
   items:
+    - name: Windows 设备管理脚本
+      href: reference-windows-scripts.md
     - name: Azure CLI
       href: /cli/azure/azure-cli-reference-for-IoT
 - name: 资源
   items:
     - name: 支持和帮助选项
-      href: /azure/iot-fundamentals/iot-support-help
+      href: ../iot-fundamentals/iot-support-help.md
     - name: Azure IoT 服务
       items:
         - name: IoT 中心
-          href: /azure/iot-hub
+          href: ../iot-hub/index.yml
         - name: IoT 中心设备预配服务
-          href: /azure/iot-dps
+          href: ../iot-dps/index.yml
         - name: IoT Central
-          href: 'https://docs.microsoft.com/microsoft-iot-central/'
+          href: /microsoft-iot-central/
         - name: IoT Edge
-          href: /azure/iot-edge
+          href: ./index.yml
         - name: IoT 解决方案加速器
-          href: /azure/iot-accelerators
+          href: ../iot-accelerators/index.yml
         - name: IoT 即插即用
-          href: /azure/iot-pnp
+          href: ../iot-pnp/index.yml
         - name: Azure Maps
-          href: /azure/azure-maps
+          href: ../azure-maps/index.yml
         - name: 时序见解
-          href: /azure/time-series-insights
+          href: ../time-series-insights/index.yml
     - name: Azure IoT SDK
       items:
         - name: IoT 服务 SDK
-          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
+          href: ../iot-hub/iot-hub-devguide-sdks.md#azure-iot-hub-service-sdks
         - name: IoT 设备 SDK
-          href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
+          href: ../iot-hub/iot-hub-devguide-sdks.md#azure-iot-hub-device-sdks
     - name: Azure IoT 示例
       items:
         - name: C# (.NET)
